// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Span: Component should render children when passed in 1`] = `
<span
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "14px",
    }
  }
>
  Short text
</span>
`;

exports[`Span: Component should render correctly 1`] = `
<span
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "14px",
    }
  }
/>
`;

exports[`Span: Component should render with attributes 1`] = `
<span
  id="test-id"
  style={
    Object {
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "14px",
    }
  }
  title="test title"
>
  Span with attributes
</span>
`;

exports[`Span: Component should render with custom styles 1`] = `
<span
  style={
    Object {
      "color": "blue",
      "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
      "fontSize": "14px",
    }
  }
>
  Span with styles
</span>
`;

exports[`Span: Component should render with custom theme 1`] = `
<span
  style={
    Object {
      "color": "gray",
      "fontFamily": "serif",
      "size": "100px",
    }
  }
>
  Span with custom theme
</span>
`;

exports[`Span: Component should render with overwritten styles 1`] = `
<span
  style={
    Object {
      "color": "blue",
      "fontSize": "10px",
    }
  }
>
  Paragraph with overwritten styles
</span>
`;
